resources/docs/1.0/features/include-exclude-urls.md
# Include/Exclude URLs

Include/Exclude URLs feature is useful in cases, where to show AddChat widget on some URLs and where not to.

---

![Include or exclude URL](https://addchat-laravel-pro-docs.classiebit.com/images/include-exclude-url.jpg "Include or exclude URL")

---

For Example

1. There are some pages, where AddChat widget needs not to be shown. Like on about us, terms, privacy policy, etc pages. 

2. And in some cases, when the website has a lot of pages, and AddChat widget needs to be shown on some specific pages only. Like profile page, product page, etc. 

---

>{danger} Either Exclude URL or Include URL can be used at a time.

---

>{primary} By default the **Include/Exclude URLs** feature is `Off`, it needs to be turned `On` from the `Admin Panel`


- [Setup Include URLs](#Setup-Include-URLs)
- [Setup Exclude URLs](#Setup-Exclude-URLs)



<a name="Setup-Include-URLs"></a>
## Setup Include URLs

To `Show` AddChat widget only on some specific URLs.

1. Go to `Admin Panel -> Settings` and scroll down to **INCLUDE/EXCLUDE URLs** section

2. Click on `Include URLs` to turn it `On`

3. Then click on &nbsp;<larecipe-button type="primary" size="sm" radius="full">Add More URL +</larecipe-button>

4. Enter the `Path` where to `show` the widget.

5. Repeat the 3rd & 4th step to add more URLs.


<a name="Setup-Exclude-URLs"></a>
## Setup Exclude URLs

To `Hide` AddChat widget only on specific URLs.

1. Go to `Admin Panel -> Settings` and scroll down to **INCLUDE/EXCLUDE URLs** section

2. Click on `Exclude URLs` to turn it `on`

3. Then click on &nbsp;<larecipe-button type="primary" size="sm" radius="full">Add More URL +</larecipe-button>

4. Enter the `Path` where to `hide` the widget.

5. Repeat the 3rd & 4th step to add more URLs.

---

>{warning} Enter the `Path` only and not the full website `URL`

---

>{primary} This gives more control over the AddChat widget functioning over your website.